New Mods to map
Set it correct w/h

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 	<div data-role="content">	
 		<p>&nbsp;<a href="tel:07758913454" data-role="button" data-icon="custom">Call</a><br>
 	    &nbsp;<a href="mailto:enquiries@shihingkungfu.co.uk" data-role="button" data-icon="custom">E-Mail</a></p>
-        <div id="mapCanvas" style="width:100%; height:100%; min-width:300px; min-height:300px"></div>
+      <div id="mapCanvas" style="width:100%; height:100%; min-width:300px; min-height:300px"></div>
         <script type="text/javascript">
 // BeginOAWidget_Instance_2187524: #mapCanvas
 
@@ -135,17 +135,17 @@
 		  navigationControl: true,
 		  navigationControlOptions: 
 		  	{style: google.maps.NavigationControlStyle.DEFAULT,
-			 position: google.maps.ControlPosition.TOP_LEFT },
+			 position: google.maps.ControlPosition.RIGHT },
 		  mapTypeControl: true,
 		  mapTypeControlOptions: 
 		  	{style: google.maps.MapTypeControlStyle.DEFAULT,
-			 position: google.maps.ControlPosition.TOP_RIGHT },
+			 position: google.maps.ControlPosition.TOP_LEFT },
 
 		  scaleControl: true,
 		   scaleControlOptions: {
-        		position: google.maps.ControlPosition.BOTTOM_LEFT
+        		position: google.maps.ControlPosition.BOTTOM_RIGHT
     	  }, 
-		  mapTypeId: google.maps.MapTypeId.ROADMAP,
+		  mapTypeId: google.maps.MapTypeId.HYBRID,
 		  draggable: true,
 		  disableDoubleClickZoom: false,
 		  keyboardShortcuts: true
@@ -160,7 +160,7 @@
 			bikeLayer.setMap(map);
 		}
 		if (false) {
-			addMarker(map,37.7715,-122.4,"We are here");
+			addMarker(map, 53.382321, -2.810439,"School is located Here");
 		}
 	  }
 
@@ -179,7 +179,8 @@
 	
 // EndOAWidget_Instance_2187524
         </script>
-<p align="center"><strong>Tarbock Village Hall<br>
+<p>&nbsp;</p>
+      <p align="center"><strong>Tarbock Village Hall<br>
 </strong>Netherley Road<br>
 Prescot<br>
 L35 1QG</p>
