--- a/index.html
+++ b/index.html
@@ -10,16 +10,6 @@
 <script src="jquery-mobile/jquery-1.5.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0a3.min.js" type="text/javascript"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
-<!-- BeginOAWidget_Shared_2187524 -->
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<!-- EndOAWidget_Shared_2187524 -->
-<script type="text/xml">
-<!--
-<oa:widgets>
-  <oa:widget wid="2187524" binding="#mapCanvas" />
-</oa:widgets>
--->
-</script>
 </head> 
 <body>
 <div data-role="page" id="page">
@@ -115,75 +105,17 @@
 		<h1>Contact</h1>
 	</div>
 	<div data-role="content">	
-		<p>&nbsp;<a href="tel:07758913454" data-role="button" data-icon="custom">Call</a><br>
+	  <p align="center">&nbsp;<a href="tel:07758913454" data-role="button" data-icon="custom">Call</a><br>
 	    &nbsp;<a href="mailto:enquiries@shihingkungfu.co.uk" data-role="button" data-icon="custom">E-Mail</a></p>
-        <div id="mapCanvas" style="width:100%; height:100%; min-width:300px; min-height:300px"></div>
-        <script type="text/javascript">
-// BeginOAWidget_Instance_2187524: #mapCanvas
-
-	  // initialize the google Maps 	
-	
-     function initializeGoogleMap() {
-		// set latitude and longitude to center the map around
-		var latlng = new google.maps.LatLng(53.382321, 
-											-2.810439);
-		
-		// set up the default options
-		var myOptions = {
-		  zoom: 16,
-		  center: latlng,
-		  navigationControl: true,
-		  navigationControlOptions: 
-		  	{style: google.maps.NavigationControlStyle.DEFAULT,
-			 position: google.maps.ControlPosition.TOP_LEFT },
-		  mapTypeControl: true,
-		  mapTypeControlOptions: 
-		  	{style: google.maps.MapTypeControlStyle.DEFAULT,
-			 position: google.maps.ControlPosition.TOP_RIGHT },
-
-		  scaleControl: true,
-		   scaleControlOptions: {
-        		position: google.maps.ControlPosition.BOTTOM_LEFT
-    	  }, 
-		  mapTypeId: google.maps.MapTypeId.ROADMAP,
-		  draggable: true,
-		  disableDoubleClickZoom: false,
-		  keyboardShortcuts: true
-		};
-		var map = new google.maps.Map(document.getElementById("mapCanvas"), myOptions);
-		if (false) {
-			var trafficLayer = new google.maps.TrafficLayer();
-			trafficLayer.setMap(map);
-		}
-		if (false) {
-			var bikeLayer = new google.maps.BicyclingLayer();
-			bikeLayer.setMap(map);
-		}
-		if (false) {
-			addMarker(map,37.7715,-122.4,"We are here");
-		}
-	  }
-
-	  window.onload = initializeGoogleMap();
-
-	 // Add a marker to the map at specified latitude and longitude with tooltip
-	 function addMarker(map,lat,long,titleText) {
-	  	var markerLatlng = new google.maps.LatLng(lat,long);
-	 	var marker = new google.maps.Marker({
-      		position: markerLatlng, 
-      		map: map, 
-      		title:"We are here",
-			icon: ""});   
-	 }
-
-	
-// EndOAWidget_Instance_2187524
-        </script>
+      <p align="center"><iframe><iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?hl=en&amp;ie=UTF8&amp;t=h&amp;ll=53.38233,-2.810526&amp;spn=0.00384,0.006437&amp;z=16&amp;output=embed"></iframe><br /><small><a href="https://maps.google.co.uk/maps?hl=en&amp;ie=UTF8&amp;t=h&amp;ll=53.38233,-2.810526&amp;spn=0.00384,0.006437&amp;z=16&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small></iframe>
+      </p>
+      <p align="center">&nbsp;</p>
+      <p align="center">&nbsp;</p>
 <p align="center"><strong>Tarbock Village Hall<br>
 </strong>Netherley Road<br>
 Prescot<br>
 L35 1QG</p>
-	</div>
+  </div>
 	<div data-role="footer">
 		<h4>&copy;2013 &bull;Shi'hing School of Kung Fu</h4>
 	</div>
