--- a/index.html
+++ b/index.html
@@ -11,21 +11,17 @@
 <script src="jquery-mobile/jquery-1.5.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0a3.min.js" type="text/javascript"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
-<!-- BeginOAWidget_Shared_2187524 -->
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<!-- EndOAWidget_Shared_2187524 -->
 <script src="includes/jquery-1.4.2.js" type="text/javascript"></script>
 <script src="jQuery/js/jquery.jsocial.js" type="text/javascript"></script>
 <script type="text/xml">
 <!--
 <oa:widgets>
   <oa:widget wid="2149023" binding="#social" />
-  <oa:widget wid="2187524" binding="#mapCanvas" />
 </oa:widgets>
 -->
 </script>
 </head> 
-<body>
+<body onLoad="GetMap();">
 <div data-role="page" id="page">
 	<!-- The 'logo' DIV below was added to the default markup -->
 	<div class="logo"></div>
@@ -121,72 +117,11 @@
 	<div data-role="content">	
 	  <p align="center">&nbsp;<a href="tel:07758913454" data-role="button" data-icon="custom">Call</a><br>
 	    &nbsp;<a href="mailto:enquiries@shihingkungfu.co.uk" data-role="button" data-icon="custom">E-Mail</a></p>
-	  <hr>
-	  <div id="mapCanvas" style="width:100%; height:100%; min-width:300px; min-height:300px"></div>
-      <script type="text/javascript">
-// BeginOAWidget_Instance_2187524: #mapCanvas
-
-	  // initialize the google Maps 	
-	
-     function initializeGoogleMap() {
-		// set latitude and longitude to center the map around
-		var latlng = new google.maps.LatLng(53.382321,
-		-2.810439);
-		
-		// set up the default options
-		var myOptions = {
-		  zoom: 15
-		 ,
-		  center: latlng,
-		  navigationControl: true,
-		  navigationControlOptions: 
-		  	{style: google.maps.NavigationControlStyle.DEFAULT,
-			 position: google.maps.ControlPosition.RIGHT },
-		  mapTypeControl: true,
-		  mapTypeControlOptions: 
-		  	{style: google.maps.MapTypeControlStyle.DEFAULT,
-			 position: google.maps.ControlPosition.TOP_LEFT },
-
-		  scaleControl: true,
-		   scaleControlOptions: {
-        		position: google.maps.ControlPosition.BOTTOM_RIGHT
-    	  }, 
-		  mapTypeId: google.maps.MapTypeId.HYBRID,
-		  draggable: true,
-		  disableDoubleClickZoom: false,
-		  keyboardShortcuts: true
-		};
-		var map = new google.maps.Map(document.getElementById("mapCanvas"), myOptions);
-		if (false) {
-			var trafficLayer = new google.maps.TrafficLayer();
-			trafficLayer.setMap(map);
-		}
-		if (false) {
-			var bikeLayer = new google.maps.BicyclingLayer();
-			bikeLayer.setMap(map);
-		}
-		if (false) {
-			addMarker(map,37.7715,-122.4,"We are here");
-		}
-	  }
-
-	  window.onload = initializeGoogleMap();
-
-	 // Add a marker to the map at specified latitude and longitude with tooltip
-	 function addMarker(map,lat,long,titleText) {
-	  	var markerLatlng = new google.maps.LatLng(lat,long);
-	 	var marker = new google.maps.Marker({
-      		position: markerLatlng, 
-      		map: map, 
-      		title:"We are here",
-			icon: ""});   
-	 }
-
-	
-// EndOAWidget_Instance_2187524
-      </script>
-<p align="center">&nbsp;</p>
-<p align="center"><strong>Tarbock Village Hall<br>
+	  <p align="center">
+	    <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?q=53.382321,-2.810439&amp;num=1&amp;t=h&amp;ie=UTF8&amp;ll=53.38233,-2.81044&amp;spn=0.00384,0.006437&amp;z=16&amp;output=embed"></iframe>
+	    <br />
+	    <small><a href="https://maps.google.co.uk/maps?q=53.382321,-2.810439&amp;num=1&amp;t=h&amp;ie=UTF8&amp;ll=53.38233,-2.81044&amp;spn=0.00384,0.006437&amp;z=16&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+	    <p align="center"><strong>Tarbock Village Hall<br>
 </strong>Netherley Road<br>
 Prescot<br>
 L35 1QG</p>
