--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html> 
 <html>
-<!-- This template was designed and developed by Chris Converse, Codify Design Studio -->
 <head>
 <title>Shi'hing School of Kung Fu</title>
-<meta charset="UTF-8">
+<meta charset="utf-8">
 <meta name="description" content="This site was created from a template originally designed and developed by Codify Design Studio. Find more free templates at http://www.adobe.com/devnet/author_bios/chris_converse.html" />
 <link href="jquery-mobile/jquery.mobile-1.0a3.min.css" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" type="text/css" href="includes/stylesheet.css" />
@@ -26,16 +25,23 @@
 	<!-- The 'logo' DIV below was added to the default markup -->
 	<div class="logo"></div>
 	<div data-role="header" class="heading">
-		<h1>Shi'hing Kung Fu</h1>
+	  <h1>Shi'hing Kung Fu</h1>
 	</div>
-	<div data-role="content">	
-		<ul data-role="listview" class="mainmenu">
+  <div data-role="content">	
+	<ul data-role="listview" class="mainmenu">
 			<li><a href="#page2">About Us</a></li>
             <li><a href="#page3">Lesson Information</a></li>
 			<li><a href="#page4">Interested?</a></li>
           <li><a href="#page5">Contact</a></li>
-		</ul>		
-	</div>
+    </ul>
+	  <p align="center">
+	    <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fshihingkungfu.co.uk%2F%3Ffeed%3Drss2&chan=title&num=3&desc=1&utf=y"  charset="UTF-8" type="text/javascript"></script>
+        <noscript>
+        <a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fshihingkungfu.co.uk%2F%3Ffeed%3Drss2&chan=title&num=3&desc=1&utf=y&html=y">POSTS</a>
+        </noscript>
+	  </p>
+		<p align="center">&nbsp;</p>		
+  </div>
 	<div data-role="footer">
 		<h4>&copy;2013 &bull; Shi'hing School of Kung Fu</h4>
 	</div>
