--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <title>Shi'hing School of Kung Fu</title>
+
 <meta charset="utf-8">
-<meta name="description" content="This site was created from a template originally designed and developed by Codify Design Studio. Find more free templates at http://www.adobe.com/devnet/author_bios/chris_converse.html" />
+<meta name="description" content="This is the official app developed for the Shihing School of Kung Fu by Scythe Apps" />
 <link href="jquery-mobile/jquery.mobile-1.0a3.min.css" rel="stylesheet" type="text/css"/>
+<link rel="stylesheet" href="css/themes/MHjQuery.css" />
 <link rel="stylesheet" type="text/css" href="includes/stylesheet.css" />
 <link href="jQuery/css/style.css" rel="stylesheet" type="text/css">
 <script src="jquery-mobile/jquery-1.5.min.js" type="text/javascript"></script>
@@ -34,12 +36,6 @@
 			<li><a href="#page4">Interested?</a></li>
           <li><a href="#page5">Contact</a></li>
     </ul>
-	  <p align="center">
-	    <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fshihingkungfu.co.uk%2F%3Ffeed%3Drss2&chan=title&num=3&desc=1&utf=y"  charset="UTF-8" type="text/javascript"></script>
-        <noscript>
-        <a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fshihingkungfu.co.uk%2F%3Ffeed%3Drss2&chan=title&num=3&desc=1&utf=y&html=y">POSTS</a>
-        </noscript>
-	  </p>
 		<p align="center">&nbsp;</p>		
   </div>
 	<div data-role="footer">
@@ -125,9 +121,9 @@
 	    &nbsp;<a href="mailto:enquiries@shihingkungfu.co.uk" data-role="button" data-icon="custom">E-Mail</a></p>
 	  <p align="center">
 	    <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?q=53.382321,-2.810439&amp;num=1&amp;t=h&amp;ie=UTF8&amp;ll=53.38233,-2.81044&amp;spn=0.00384,0.006437&amp;z=16&amp;output=embed"></iframe>
-	    <br />
-	    <small><a href="https://maps.google.co.uk/maps?q=53.382321,-2.810439&amp;num=1&amp;t=h&amp;ie=UTF8&amp;ll=53.38233,-2.81044&amp;spn=0.00384,0.006437&amp;z=16&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
-	    <p align="center"><strong>Tarbock Village Hall<br>
+	  <p align="center">      <a href="https://maps.google.co.uk/maps?q=53.382321,-2.810439&num=1&t=h&ie=UTF8&ll=53.38233,-2.81044&spn=0.00384,0.006437&z=16&source=embed" data-role="button">Large Map</a>
+      <p align="center">      
+<p align="center"><strong>Tarbock Village Hall<br>
 </strong>Netherley Road<br>
 Prescot<br>
 L35 1QG</p>
@@ -136,5 +132,15 @@ L35 1QG</p>
 	  <h4>&copy;2013 &bull;Shi'hing School of Kung Fu</h4>
 	</div>
 </div>
+<div data-role="page" id="page7">
+  <div data-role="header">
+    <h1>Header</h1>
+  </div>
+  <div data-role="content">Content</div>
+  <div data-role="footer">
+    <h4>Footer</h4>
+  </div>
+</div>
+
 </body>
 </html>
