--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 .rss-box {
 	 margin: 1em;
-	 width: 250px;
+	 width: 90%;
 	 background-color: #333333;
 	 border: 1px solid #000000;
 	 
@@ -117,18 +117,12 @@ p.rss-title {padding:0.5em;}
 	</div>
   <div data-role="content">	
 	<ul data-role="listview" class="mainmenu">
-			<li><a href="#page2">About Us</a></li>
-            <li><a href="#page3">Lesson Information</a></li>
-			<li><a href="#page4">Interested?</a></li>
+			<li><a href="#page2">News Feed</a></li>
+            <li><a href="#page3">About Us</a></li>
+			<li><a href="#page4">School Information</a></li>
           <li><a href="#page5">Contact</a></li>
     </ul>
-		<p align="center">News Feed</p>
-		<p align="center">
-		  <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fshihingkungfu.co.uk%2F%3Ffeed%3Drss2&chan=y&num=3&tz=-5&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
-          <noscript>
-          <a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fshihingkungfu.co.uk%2F%3Ffeed%3Drss2&chan=y&num=3&tz=-5&utf=y&html=y">RSS</a>
-          </noscript>
-		</p>		
+		<p align="center">&nbsp;</p>		
   </div>
 	<div data-role="footer">
 		<h4>&copy;2013 &bull; Shi'hing School of Kung Fu</h4>
@@ -137,26 +131,16 @@ p.rss-title {padding:0.5em;}
 
 <div data-role="page" id="page2">
 	<div data-role="header">
-		<h1>About</h1>
+		<h1>News Feed</h1>
 	</div>
 	<div data-role="content">
 	  <div>
-	    <p>The Shi&rsquo;hing School of Kung Fu was established in January 2003 after the closure of the Whiston School of Hung Gar Kung Fu ran by the late Sifu Eddie Pugh.</p>
-		  <p>The Shi&rsquo;hing School of Kung Fu trains using Tian Kai Kung Fu.  Tian Kai uses Hung Gar techniques, but has adapted some ideals to ensure the techniques used are &ldquo;street smart&rdquo; and to be able to be used in difficult situations.</p>
-		  <p>Tian Kai is a relatively new style of Kung Fu which is based on the Hung Gar syllabus.  Hung Gar is one of the most famous and respected system of Chinese Martial Arts to emerge out of southern China with roots dating back to the 17th Century Shaolin Temples.  It is a complete system of Kung Fu known for its direct and powerful, no-nonsense martial techniques, self-defence and tremendous benefits.</p>
-		  <p>Besides the obvious and well known benefits, such as self-defence, physical, mental and health benefits, correct Kung Fu training generates positive results in every aspect of life – better focus, motivation, increased self-confidence, self-discipline, stress management, calmness under pressure, strength of character and more.</p>
-		  <p>The training at our school includes:</p>
-		  <ul>
-		    <li>Fundamental exercises</li>
-		    <li>Solo, partner and group drills</li>
-		    <li>Traditional hand and leg forms</li>
-		    <li>Traditional weapons forms</li>
-		    <li>Combat sequences and sparring</li>
-		    <li>Application drills and self-defence</li>
-		    <li>Strengthening and conditioning</li>
-	      </ul>
-		  <p>The school offers a relaxed training atmosphere, and as we are mainly a family based school, the classes are enjoyable and are very suitable for beginners to martial arts.  Teaching is at the students&rsquo; own pace, and we will never force you to perform a technique that you are not ready for.</p>
-		  <p>The school does not allow potential students or visitors to spectate during the classes.  I have often found that potential students who watch do not return.  Their thoughts are often &ldquo;I won&rsquo;t be able to do that…&rdquo; whereas they hadn&rsquo;t even attempted the technique.  95% of students who attend and join in the very first lesson will return and become members of the school.  The other 5% feel that this style of martial arts is just not for them.</p>
+	    <p align="Center">
+          <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fshihingkungfu.co.uk%2F%3Ffeed%3Drss2&chan=y&num=3&tz=-5&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
+          <noscript>
+          <div align="center"><a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fshihingkungfu.co.uk%2F%3Ffeed%3Drss2&chan=y&num=3&tz=-5&utf=y&html=y">RSS</a></div>
+          </noscript>
+	    </p>
 	  </div>
 		<p><br>
 	  </p>		
@@ -168,17 +152,27 @@ p.rss-title {padding:0.5em;}
 
 <div data-role="page" id="page3">
 	<div data-role="header">
-		<h1>Lesson Information</h1>
+		<h1>About Us</h1>
 	</div>
 	<div data-role="content">
-		<p>Children (boys and girls; ages 7-15) – £4.50 per session</p>
-		<p>Adults (men and women; ages 16+) – £5.50 per session</p>
-		<p>The class fees are to be paid in advance of 4-weekly periods.  An invoice will be produced with the amount to be paid.</p>
-	  <p>New students can &lsquo;pay per session&rsquo; for the first 4 weeks.  In the final week, you will be given two invoices.  One will be for a full membership package which will include a full uniform, licence and insurance; and the second will be for your class payments for the following 4-week block.  These invoices will need to be paid in the following lesson.</p>
-		<p>The membership package is mandatory for all students.	  </p>
-	  <p><strong>Monday – 7.00pm to 8.30pm</strong></p>
-	  <p><strong>Thursday – 7.00pm to 8.30pm</strong><br>
-      </p>
+	  <p>The Shi&rsquo;hing School of Kung Fu was established in January 2003 after the closure of the Whiston School of Hung Gar Kung Fu ran by the late Sifu Eddie Pugh.</p>
+        <p>The Shi&rsquo;hing School of Kung Fu trains using Tian Kai Kung Fu.  Tian Kai uses Hung Gar techniques, but has adapted some ideals to ensure the techniques used are &ldquo;street smart&rdquo; and to be able to be used in difficult situations.</p>
+        <p>Tian Kai is a relatively new style of Kung Fu which is based on the Hung Gar syllabus.  Hung Gar is one of the most famous and respected system of Chinese Martial Arts to emerge out of southern China with roots dating back to the 17th Century Shaolin Temples.  It is a complete system of Kung Fu known for its direct and powerful, no-nonsense martial techniques, self-defence and tremendous benefits.</p>
+        <p>Besides the obvious and well known benefits, such as self-defence, physical, mental and health benefits, correct Kung Fu training generates positive results in every aspect of life – better focus, motivation, increased self-confidence, self-discipline, stress management, calmness under pressure, strength of character and more.</p>
+        <p>The training at our school includes:</p>
+        <ul>
+          <li>Fundamental exercises</li>
+          <li>Solo, partner and group drills</li>
+          <li>Traditional hand and leg forms</li>
+          <li>Traditional weapons forms</li>
+          <li>Combat sequences and sparring</li>
+          <li>Application drills and self-defence</li>
+          <li>Strengthening and conditioning</li>
+        </ul>
+        <p>The school offers a relaxed training atmosphere, and as we are mainly a family based school, the classes are enjoyable and are very suitable for beginners to martial arts.  Teaching is at the students&rsquo; own pace, and we will never force you to perform a technique that you are not ready for.</p>
+        <p>The school does not allow potential students or visitors to spectate during the classes.  I have often found that potential students who watch do not return.  Their thoughts are often &ldquo;I won&rsquo;t be able to do that…&rdquo; whereas they hadn&rsquo;t even attempted the technique.  95% of students who attend and join in the very first lesson will return and become members of the school.  The other 5% feel that this style of martial arts is just not for them.</p>
+        <p><br>
+        </p>
 	</div>
 	<div data-role="footer">
 		<h4>&copy;2013 &bull;Shi'hing School of Kung Fu</h4>
@@ -187,7 +181,7 @@ p.rss-title {padding:0.5em;}
 
 <div data-role="page" id="page4">
 	<div data-role="header">
-		<h1>Interested?</h1>
+		<h1>School Information</h1>
 	</div>
 	<div data-role="content">	
 		<p>Our doors are open to new students for ages 7 upwards (children and adults) at all times.  You are more than welcome to attend one of the classes.</p>
