--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@ p.rss-title {padding:0.5em;}
 	</div>
 	<div data-role="content">
 	  <div>
-	    <p align="Center">
-          <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fshihingkungfu.co.uk%2F%3Ffeed%3Drss2&chan=y&num=3&tz=-5&utf=y&html=a"  charset="UTF-8" type="text/javascript"></script>
-          <noscript>
-          <div align="center"><a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fshihingkungfu.co.uk%2F%3Ffeed%3Drss2&chan=y&num=3&tz=-5&utf=y&html=y">RSS</a></div>
-          </noscript>
+	    <p align="center">
+         
 	    </p>
 	  </div>
-		<p><br>
+	  <p align="center"><a class="twitter-timeline" data-dnt="true" href="https://twitter.com/MilekScythe" data-widget-id="332588636958760961">Tweets by @MilekScythe</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      </p>
+		<p align="center"><br>
 	  </p>		
 	</div>
 	<div data-role="footer">
@@ -218,15 +218,5 @@ L35 1QG</p>
 	  <h4>&copy;2013 &bull;Shi'hing School of Kung Fu</h4>
 	</div>
 </div>
-<div data-role="page" id="page7">
-  <div data-role="header">
-    <h1>Header</h1>
-  </div>
-  <div data-role="content">Content</div>
-  <div data-role="footer">
-    <h4>Footer</h4>
-  </div>
-</div>
-
 </body>
 </html>
