new twitter mod
commit

--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@ p.rss-title {padding:0.5em;}
          
 	    </p>
 	  </div>
-	  <p align="center"><a class="twitter-timeline" data-dnt="true" href="https://twitter.com/MilekScythe" data-widget-id="332588636958760961">Tweets by @MilekScythe</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+	  <p align="center"><a class="twitter-timeline" href="https://twitter.com/shihingkungfu" data-widget-id="332591235787268096">Tweets by @shihingkungfu</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
       </p>
 		<p align="center"><br>
 	  </p>		
