--- a/index.html
+++ b/index.html
@@ -3,96 +3,10 @@
 <head>
 <title>Shi'hing School of Kung Fu</title>
 
-<style type="text/css"  media="all">
-
-/* begin styles for RSS Feed */
-
-.rss-box {
-	 margin: 1em;
-	 width: 90%;
-	 background-color: #333333;
-	 border: 1px solid #000000;
-	 
-}
-.rss-items {
-	margin-top:0px;
-	padding:0.5em; 0.5em;
-	margin-left:0px;
-	color:#000000;
-}
-p.rss-title {padding:0.5em;}
-.rss-title {
-	font-size: 9pt;
-	background-color: #000000;
-	color: #f76b08;
-	font-weight:bold;
-	text-align: center;
-}
-
-.rss-item  {
-  color:#DFDFDF;
-  font-size: 8pt;
-  list-style:none;
-  padding-bottom:1em;
-}
-
-.rss-item a {
-	color:#f67b08;
-	font-size: 9pt;
-	font-weight:bold;
-	}
-	
-.rss-item a:visited {
-	color: #f67b08;
-}
-
-.rss-item a:hover {
-	color: #00FFFF;
-}
-
-
-.rss-date {
-	font-size: 8pt;
-	color: #f76b08;
-	} 
-/* buttons modeled from http://www.wellstyled.com/css-inline-buttons.html */
-
-.pod-play {
-   _width:12em;
-   margin: 0 0.2em; padding: 0.1em 0; _padding:0;
-   
-   white-space:nowrap;
-   text-decoration: none;
-   vertical-align:middle;
-   background: #fb6;
-   color: black;
-   }
-.pod-play em {
-   _width:1em; _cursor:hand;
-   font-style: normal;
-   margin:0; padding: 0.1em 0.5em;
-   background: white;
-   color: #222;
-   }
-.pod-play span {
-   _width:1em; _cursor:hand;
-   margin:0; padding: 0.1em 0.5em 0.1em 0.3em;
-   }
-.pod-play:hover {
-   background: #666;
-   color: white;
-   }
-.pod-play:hover em {
-   background: black;
-   color: white
-   }
-
-</style>
-
 <meta charset="utf-8">
 <meta name="description" content="This is the official app developed for the Shihing School of Kung Fu by Scythe Apps" />
 <link href="jquery-mobile/jquery.mobile-1.0a3.min.css" rel="stylesheet" type="text/css"/>
-<link rel="stylesheet" href="css/themes/MHjQuery.css" />
+<link rel="stylesheet" href="css/main.css" />
 <link rel="stylesheet" type="text/css" href="includes/stylesheet.css" />
 <link href="jQuery/css/style.css" rel="stylesheet" type="text/css">
 <script src="jquery-mobile/jquery-1.5.min.js" type="text/javascript"></script>
@@ -110,7 +24,7 @@ p.rss-title {padding:0.5em;}
 </head> 
 <body onLoad="GetMap();">
 <div data-role="page" id="page">
-	<!-- The 'logo' DIV below was added to the default markup -->
+	
 	<div class="logo"></div>
 	<div data-role="header" class="heading">
 	  <h1>Shi'hing Kung Fu</h1>
@@ -205,19 +119,20 @@ p.rss-title {padding:0.5em;}
 	</div>
 	<div data-role="content">	
 	  <p align="center">&nbsp;<a href="tel:07758913454" data-role="button" data-icon="custom">Call</a><br>
-	    &nbsp;<a href="mailto:enquiries@shihingkungfu.co.uk" data-role="button" data-icon="custom">E-Mail</a></p>
+	    &nbsp;<a href="mailto:enquiries@shihingkungfu.co.uk?subject=Enquiry from App" data-role="button" data-icon="custom">E-Mail<br>
+	    </a><strong>Tarbock Village Hall<br>
+        </strong>Netherley Road<br>
+Prescot<br>
+L35 1QG      </p>
+	  <p align="center">      <a href="https://maps.google.co.uk/maps?q=53.382321,-2.810439&num=1&t=h&ie=UTF8&ll=53.38233,-2.81044&spn=0.00384,0.006437&z=16&source=embed" data-role="button">Large Map</a>      
 	  <p align="center">
 	    <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?q=53.382321,-2.810439&amp;num=1&amp;t=h&amp;ie=UTF8&amp;ll=53.38233,-2.81044&amp;spn=0.00384,0.006437&amp;z=16&amp;output=embed"></iframe>
-	  <p align="center">      <a href="https://maps.google.co.uk/maps?q=53.382321,-2.810439&num=1&t=h&ie=UTF8&ll=53.38233,-2.81044&spn=0.00384,0.006437&z=16&source=embed" data-role="button">Large Map</a>
-      <p align="center">      
-<p align="center"><strong>Tarbock Village Hall<br>
-</strong>Netherley Road<br>
-Prescot<br>
-L35 1QG</p>
+</p>
   </div>
 	<div data-role="footer">
 	  <h4>&copy;2013 &bull;Shi'hing School of Kung Fu</h4>
 	</div>
 </div>
+<div class="modal"><!-- Place at bottom of page --></div>
 </body>
 </html>
