Should be the last
But I've said that before!

--- a/index.html
+++ b/index.html
@@ -117,18 +117,22 @@
 	<div data-role="header">
 		<h1>Contact</h1>
 	</div>
-	<div data-role="content">
-	  <p align="center">
-	  <div align="center">
-	    <div data-role="controlgroup" data-type="horizontal"><a href="tel:07758913454" data-role="button">Call</a><a href="mailto:enquiries@shihingkungfu.co.uk?subject=Enquiry from App" data-role="button">E-Mail</a><a href="http://www.shihingkungfu.co.uk" data-role="button">Website</a><a href="https://maps.google.co.uk/maps?q=53.382321,-2.810439&num=1&t=h&ie=UTF8&ll=53.38233,-2.81044&spn=0.00384,0.006437&z=16&source=embed" data-role="button">Large Map</a></div>
-        <strong>Tarbock Village Hall<br>
-        </strong>Netherley Road<br>
+  <div data-role="content">
+    <p align="center">
+    <div align="center">
+      <div data-role="controlgroup" data-type="horizontal">
+        <p><a href="tel:07758913454" data-role="button">Call</a><a href="mailto:enquiries@shihingkungfu.co.uk?subject=Enquiry from App" data-role="button">E-Mail</a></p>
+        <p><a href="http://www.shihingkungfu.co.uk" data-role="button">Website</a><a href="https://maps.google.co.uk/maps?q=53.382321,-2.810439&num=1&t=h&ie=UTF8&ll=53.38233,-2.81044&spn=0.00384,0.006437&z=16&source=embed" data-role="button">Large Map</a> <br>
+        </p>
+</div>
+    </div>
+    <p align="center"><strong>Tarbock Village Hall<br>
+      </strong>Netherley Road<br>
 Prescot<br>
-L35 1QG<br>
-      </div>
-      <p align="center">
-	    <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?q=53.382321,-2.810439&amp;num=1&amp;t=h&amp;ie=UTF8&amp;ll=53.38233,-2.81044&amp;spn=0.00384,0.006437&amp;z=16&amp;output=embed"></iframe>
-</p>
+    L35 1QG</p>
+    <p align="center">
+  <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?q=53.382321,-2.810439&amp;num=1&amp;t=h&amp;ie=UTF8&amp;ll=53.38233,-2.81044&amp;spn=0.00384,0.006437&amp;z=16&amp;output=embed"></iframe>
+    </p>
   </div>
 	<div data-role="footer">
 	  <h4>&copy;2013 &bull;Shi'hing School of Kung Fu</h4>
