--- a/index.html
+++ b/index.html
@@ -118,21 +118,29 @@
 		<h1>Contact</h1>
 	</div>
   <div data-role="content">
-    <p align="center">
     <div align="center">
-      <div data-role="controlgroup" data-type="horizontal">
-        <p><a href="tel:07758913454" data-role="button">Call</a><a href="mailto:enquiries@shihingkungfu.co.uk?subject=Enquiry from App" data-role="button">E-Mail</a></p>
-        <p><a href="http://www.shihingkungfu.co.uk" data-role="button">Website</a><a href="https://maps.google.co.uk/maps?q=53.382321,-2.810439&num=1&t=h&ie=UTF8&ll=53.38233,-2.81044&spn=0.00384,0.006437&z=16&source=embed" data-role="button">Large Map</a> <br>
-        </p>
-</div>
+      <table width="250" border="0" cellspacing="1" cellpadding="1">
+        <tr>
+          <td><div align="center"><a href="tel:07758913454" data-role="button">CALL</a></div></td>
+          <td><div align="center"><a href="mailto:enquiries@shihingkungfu.co.uk?subject=Enquiry from App" data-role="button">E-MAIL</a></div></td>
+        </tr>
+        <tr>
+          <td><div align="center"><a href="http://www.shihingkungfu.co.uk" data-role="button">WEBSITE</a></div></td>
+          <td><div align="center"><a href="https://maps.google.co.uk/maps?q=53.382321,-2.810439&num=1&t=h&ie=UTF8&ll=53.38233,-2.81044&spn=0.00384,0.006437&z=16&source=embed" data-role="button">LARGE MAP</a></div></td>
+        </tr>
+      </table>
     </div>
     <p align="center"><strong>Tarbock Village Hall<br>
-      </strong>Netherley Road<br>
+    </strong>Netherley Road<br>
 Prescot<br>
-    L35 1QG</p>
+L35 1QG    
     <p align="center">
-  <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?q=53.382321,-2.810439&amp;num=1&amp;t=h&amp;ie=UTF8&amp;ll=53.38233,-2.81044&amp;spn=0.00384,0.006437&amp;z=16&amp;output=embed"></iframe>
-    </p>
+      <iframe width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?q=53.382321,-2.810439&amp;num=1&amp;t=h&amp;ie=UTF8&amp;ll=53.38233,-2.81044&amp;spn=0.00384,0.006437&amp;z=16&amp;output=embed"></iframe>        
+    <div align="center">
+      <div data-role="controlgroup" data-type="horizontal"></div>
+    </div>
+    <p align="center">&nbsp;</p>
+    <p align="center">&nbsp;</p>
   </div>
 	<div data-role="footer">
 	  <h4>&copy;2013 &bull;Shi'hing School of Kung Fu</h4>
