--- a/index.html
+++ b/index.html
@@ -25,21 +25,33 @@
 <body onLoad="GetMap();">
 <div data-role="page" id="page">
 	
-	<div class="logo"></div>
+	<div class="logo">
+	  <p>&nbsp;</p>
+	  <p>&nbsp;</p>
+	  <p>&nbsp;</p>
+	</div>
 	<div data-role="header" class="heading">
 	  <h1>Shi'hing Kung Fu</h1>
 	</div>
-  <div data-role="content">	
-	<ul data-role="listview" class="mainmenu">
-			<li><a href="#page2">News Feed</a></li>
-            <li><a href="#page3">About Us</a></li>
-			<li><a href="#page4">School Information</a></li>
-          <li><a href="#page5">Contact</a></li>
-    </ul>
+  <div data-role="content">
+<div align="center"></div>
+		<div align="center">
+		  <table width="250" border="0" cellspacing="1" cellpadding="1">
+		    <tr>
+		      <td><div align="center"><a href="#page2"><img src="images/alchemy.png" width="116" height="114"></a></div></td>
+		      <td><div align="center"><a href="#page3"><img src="images/onehanded.png" alt="" width="116" height="114"></a></div></td>
+	        </tr>
+		    <tr>
+		      <td><div align="center"><a href="#page4"><img src="images/thieves.png" alt="" width="116" height="114"></a></div></td>
+		      <td><div align="center"><a href="#page5"><img src="images/magic.png" alt="" width="116" height="114"></a></div></td>
+	        </tr>
+	      </table>
+    </div>
+		<div align="center"></div>
 		<p align="center">&nbsp;</p>		
   </div>
 	<div data-role="footer">
-		<h4>&copy;2013 &bull; Shi'hing School of Kung Fu</h4>
+		<h4>&copy;2013 &bull; Scythe Apps</h4>
 	</div>
 </div>
 
